# garage

./: CONTRIBUTING.md  Cargo.toml  SECURITY.md  flake.nix  shell.nix  taplo.toml  typos.toml
.woodpecker/: debug.yaml  publish.yaml  release.yaml
doc/api/: garage-admin-v0.yml  garage-admin-v1.yml  garage-admin-v2.json
doc/book/connect/: _index.md  backup.md  cli.md  repositories.md
doc/book/connect/apps/: index.md
doc/book/cookbook/: ansible.md  binary-packages.md  encryption.md  exposing-websites.md  from-source.md  kubernetes.md  real-world.md  reverse-proxy.md  systemd.md
doc/book/design/: _index.md  goals.md  internals.md  related-work.md
doc/book/design/benchmarks/: index.md
doc/book/development/: devenv.md  miscellaneous-notes.md  release-process.md
doc/book/operations/: durability-repairs.md  layout.md  multi-hdd.md  recovering.md  upgrading.md
doc/book/quick-start/: _index.md
doc/book/reference-manual/: configuration.md  features.md  k2v.md  known-issues.md  s3-compatibility.md
doc/book/working-documents/: compatibility-target.md  design-draft.md  load-balancing.md  migration-07.md  testing-strategy.md
doc/drafts/: admin-api.md  k2v-spec.md
doc/optimal_layout_report/: geodistrib.tex  optimal_layout.tex
doc/talks/2025-10-06-josy/: talk.tex
doc/talks/2026-01-31-fosdem/: .gitignore  talk.tex
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: admin_api_token_crdt.rs  block_ref_crdt.rs  bucket_alias_crdt.rs  key_crdt.rs  mpu_crdt.rs  version_crdt.rs
nix/: build_index.nix  compile.nix
script/: dev-env-aws.sh  test-skip-part.sh
script/helm/garage/: Chart.yaml  README.md  values.yaml
script/helm/garage/templates/: _helpers.tpl  clusterrole.yaml  configmap.yaml  secret.yaml  service-headless.yaml  service.yaml  workload.yaml
script/jepsen.garage/: README.md
script/telemetry/: grafana-garage-dashboard-prometheus.json
src/api/admin/: Cargo.toml  admin_token.rs  api.rs  api_server.rs  block.rs  bucket.rs  cluster.rs  error.rs  key.rs  layout.rs  macros.rs  node.rs  openapi.rs  repair.rs  router_v0.rs  router_v1.rs  router_v2.rs  special.rs
src/api/common/: Cargo.toml  common_error.rs  cors.rs  encoding.rs  generic_server.rs  lib.rs  router_macros.rs
src/api/common/signature/: body.rs  checksum.rs  error.rs  mod.rs  payload.rs  streaming.rs
src/api/common/xml/: cors.rs  lifecycle.rs  mod.rs  website.rs
src/api/k2v/: Cargo.toml  api_server.rs  batch.rs  error.rs  index.rs  item.rs  range.rs  router.rs
src/api/s3/: Cargo.toml  api_server.rs  bucket.rs  copy.rs  cors.rs  delete.rs  encryption.rs  error.rs  get.rs  lib.rs  lifecycle.rs  list.rs  multipart.rs  post_object.rs  put.rs  router.rs  website.rs  xml.rs
src/block/: Cargo.toml  block.rs  layout.rs  manager.rs  metrics.rs  rc.rs  repair.rs  resync.rs
src/db/: Cargo.toml  fjall_adapter.rs  lib.rs  lmdb_adapter.rs  open.rs  sqlite_adapter.rs  test.rs  typed.rs
src/garage/: Cargo.toml  main.rs  secrets.rs  server.rs  tracing_setup.rs
src/garage/admin/: mod.rs
src/garage/cli/: structs.rs
src/garage/cli/local/: completions.rs  convert_db.rs  mod.rs
src/garage/cli/remote/: admin_token.rs  block.rs  bucket.rs  cluster.rs  key.rs  layout.rs  mod.rs  node.rs  worker.rs
src/garage/repair/: online.rs
src/garage/tests/common/: client.rs  custom_requester.rs  garage.rs  mod.rs
src/garage/tests/k2v/: item.rs
src/garage/tests/s3/: cors.rs  list.rs  mod.rs  multipart.rs  objects.rs  presigned.rs  signature_encoding.rs  ssec.rs  website.rs
src/k2v-client/: Cargo.toml  lib.rs
src/model/: Cargo.toml  admin_token_table.rs  bucket_alias_table.rs  bucket_table.rs  garage.rs  index_counter.rs  key_table.rs  snapshot.rs
src/model/helper/: bucket.rs  error.rs  locked.rs
src/model/k2v/: causality.rs  item_table.rs  rpc.rs  seen.rs
src/model/s3/: block_ref_table.rs  lifecycle_worker.rs  mpu_table.rs  object_table.rs  version_table.rs
src/net/: Cargo.toml  bytes_buf.rs  client.rs  endpoint.rs  error.rs  lib.rs  message.rs  netapp.rs  peering.rs  recv.rs  send.rs  stream.rs  test.rs  util.rs
src/rpc/: Cargo.toml  consul.rs  kubernetes.rs  metrics.rs  rpc_helper.rs  system.rs  system_metrics.rs
src/rpc/layout/: graph_algo.rs  helper.rs  history.rs  manager.rs  mod.rs  test.rs  version.rs
src/table/: Cargo.toml  data.rs  gc.rs  merkle.rs  metrics.rs  queue.rs  schema.rs  sync.rs  table.rs
src/table/replication/: fullcopy.rs  parameters.rs  sharded.rs
src/util/: Cargo.toml  config.rs  data.rs  encode.rs  error.rs  metrics.rs  migrate.rs  time.rs
src/util/background/: mod.rs  worker.rs
src/util/crdt/: crdt.rs  lww.rs  lww_map.rs  mod.rs  option.rs
src/web/: Cargo.toml  error.rs  web_server.rs
