[package]
name = "garage_db"
version = "2.2.0"
authors = ["Alex Auvolat <alex@adnab.me>"]
edition = "2018"
license = "AGPL-3.0"
description = "Abstraction over multiple key/value storage engines that supports transactions"
repository = "https://git.deuxfleurs.fr/Deuxfleurs/garage"
readme = "../../README.md"

[lib]
path = "lib.rs"

[dependencies]
thiserror.workspace = true
tracing.workspace = true

heed = { workspace = true, optional = true }

rusqlite = { workspace = true, optional = true, features = ["backup"] }
r2d2 = { workspace = true, optional = true }
r2d2_sqlite = { workspace = true, optional = true }

fjall = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }

[dev-dependencies]
mktemp.workspace = true

[features]
default = ["lmdb", "sqlite"]
bundled-libs = ["rusqlite?/bundled"]
lmdb = ["heed"]
fjall = ["dep:fjall", "dep:parking_lot"]
sqlite = ["rusqlite", "r2d2", "r2d2_sqlite"]

[lints]
workspace = true
